update LeetCode Biweekly Contest 172

--- a/algorithm/LeetCode/[Hard] 2092. Find All People With Secret.md
+++ b/algorithm/LeetCode/[Hard] 2092. Find All People With Secret.md
@@ -208,3 +208,79 @@ public:
     }
 };
 ```
+
+**Solution 5: (Union Find, group by time else reset)**
+```
+Runtime: 140 ms, Beats 73.17%
+Memory: 207.29 MB, Beats 37.67%
+```
+```c++
+class Solution {
+    vector<int> p, rk;
+    int find(int x) {
+        if (x != p[x]) {
+            p[x] = find(p[x]);
+        }
+        return p[x];
+    }
+    void uni(int x, int y) {
+        int xr = find(x), yr = find(y);
+        if (rk[xr] > rk[yr]) {
+            p[yr] = xr;
+        } else if (rk[yr] > rk[xr]) {
+            p[xr] = yr;
+        } else {
+            rk[xr] += 1;
+            p[yr] = xr;
+        }
+    }
+public:
+    vector<int> findAllPeople(int n, vector<vector<int>>& meetings, int firstPerson) {
+        int x, y, t, r, xr, yr;
+        map<int, vector<array<int, 2>>> mp;
+        for (auto &m: meetings) {
+            x = m[0];
+            y = m[1];
+            t = m[2];
+            mp[t].push_back({x, y});
+        }
+        p.resize(n);
+        rk.resize(n);
+        for (x = 0; x < n; x ++) {
+            p[x] = x;
+        }
+        uni(0, firstPerson);
+        vector<int> ans;
+        vector<bool> visited(n);
+        ans.push_back(0);
+        ans.push_back(firstPerson);
+        visited[0] = true;
+        visited[firstPerson] = true;
+        for (auto &[_, vs]: mp) {
+            for (auto &[cx, cy]: vs) {
+                uni(cx, cy);
+            }
+            r = find(0);
+            for (auto &[cx, cy]: vs) {
+                xr = find(cx);
+                if (r != xr) {
+                    p[cx] = cx;
+                    p[cy] = cy;
+                    rk[cx] = 0;
+                    rk[cy] = 0;
+                } else {
+                    if (!visited[cx]) {
+                        visited[cx] = true;
+                        ans.push_back(cx);
+                    }
+                    if (!visited[cy]) {
+                        visited[cy] = true;
+                        ans.push_back(cy);
+                    }
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
