--- a/algorithm/LeetCode/[Hard] 2949. Count Beautiful Substrings II.md
+++ b/algorithm/LeetCode/[Hard] 2949. Count Beautiful Substrings II.md
@@ -106,3 +106,52 @@ public:
     }
 };
 ```
+
+**Solution 1: (Prefix Sum, Hash Table, Counter, O(n * sqrt(k)))**
+
+* v == nv
+* v + nv = m
+-> v = nv = m / 2
+    
+* (v * nv) % k = 0
+-> (m / 2 * m / 2) % k = 0
+-> (m^2 / 4) % k = 0
+-> m^2 % 4k = 0
+   ^
+  smallest
+
+    s = "b    a    e    y    h", k = 2
+         ----------------
+              ----------------
+v     0  -1   0    1    0   -1
+pre
+         0    1    2    3    4
+0        -1:1                -1:2
+1             0:1
+2                  1:1
+3   0:1                 0:2
+ans                     1    2
+
+```
+Runtime: 98 ms, Beats 84.40%
+Memory: 37.48 MB, Beats 79.82%
+```
+```c++
+class Solution {
+public:
+    long long beautifulSubstrings(string s, int k) {
+        int n = s.length(), v = 0, i, m;
+        for (m = 1; m * m % (k * 4); m ++);  // smalleest m
+        string vowels = "aeiou";
+        vector<unordered_map<int, int>> pre(m);  // diff, count
+        pre[m - 1][0] = 1;
+        long long ans = 0;
+        for (i = 0; i < n; i ++) {
+            v += vowels.find(s[i]) != string::npos ? 1: -1;  // diff
+            ans += pre[i % m][v];
+            pre[i % m][v] += 1;
+        }
+        return ans;
+    }
+};
+```
