--- a/algorithm/LeetCode/[Hard] 3017. Count the Number of Houses at a Certain Distance II.md
+++ b/algorithm/LeetCode/[Hard] 3017. Count the Number of Houses at a Certain Distance II.md
@@ -60,7 +60,7 @@ Explanation: For each distance k the pairs are:
 
 # Submissions
 ---
-**Solution 1: (Burning Points)**
+**Solution 1: (Burning Points, Counter, Prefix Sum)**
 
 __Intuition__
 For each start point i where 1 < i < n,
@@ -107,10 +107,35 @@ public:
         vector<long long> A(n);
         for (int i = 1; i <= n; ++i) {
             A[0] += 2;                               // go left and right
+            //  ---------------------  
+            //       <-  ^i ->
+
             A[min(i - 1, abs(i - y) + x)]--;         // reach 1 then stop
+            //
+            //  |-----------------|
+            // ------------------------
+            //  1   ^x     ^y     ^i  
+            //      --------   
+
             A[min(n - i, abs(i - x) + 1 + n - y)]--; // reach n then stop
+            //
+            //            |-----------------|
+            // -------------------------------
+            //      ^x    ^i      ^y        n
+            //      ---------------
+  
             A[min(abs(i - x), abs(y - i) + 1)]++;    // reach x then split
+            //
+            // -------------------------------
+            //      ^x   ^i          ^y
+            //
+
             A[min(abs(i - x) + 1, abs(y - i))]++;    // reach y then split
+            //
+            // -------------------------------
+            //      ^x          ^i   ^y
+            //
+
             int r = max(x - i, 0) + max(i - y, 0);
             A[r + (y - x + 0) / 2]--;                // i -> x -> y <- x
             A[r + (y - x + 1) / 2]--;                // i -> y -> x <- y
