--- a/algorithm/LeetCode/[Hard] 3086. Minimum Moves to Pick K Ones.md
+++ b/algorithm/LeetCode/[Hard] 3086. Minimum Moves to Pick K Ones.md
@@ -60,6 +60,7 @@ The cost of using operation 2 to pick 1, is the distance to that 1.
 
 __Intuition 2__
 
+|x - y| == 1
 i - 1, i, i + 1, at most 3 places have diatance <= 2.
 We will at most take m + 3 of 1 using operation 2,
 
@@ -105,6 +106,60 @@ public:
             }
         }
         return res;
+    }
+};
+```
+
+**Solution 1: (Minimum Distance of Points, Prefix Sum, Sliding Window, minimum distance from m points)**
+
+    operation 1 (change): cost 2
+    maxChange
+    -
+k = 1 2 3
+      ---
+      ck ?
+      operation 2 (swapa) = the distance to 1: cost 1 (minimum distance from m points) -> prefer
+
+                1               5   6           9
+    nums = [1,  1,  0,  0,  0,  1,  1,  0,  0,  1], k = 3, maxChanges = 1, ans = 3
+    pre    [0   0   1   6   12  21]
+            -----
+              ck (minimum distance from m points)
+            ^i  ^mid1
+                 mid2
+            ---------
+            ^i  ^m1 ^m2 
+   
+    
+
+```
+Runtime: 5 ms, Beats 87.10%
+Memory: 87.46 MB, Beats 70.97%
+```
+```c++
+class Solution {
+public:
+    long long minimumMoves(vector<int>& nums, int k, int maxChanges) {
+        vector<long long> pre = {0};
+        for (int i = 0; i < nums.size(); i ++) {
+            if (nums[i]) {
+                pre.push_back(pre.back() + i);
+            }
+        }
+        int n = pre.size() - 1, m = max(0, k - maxChanges), i, ck, mid1, mid2;
+        long long cur, ans = 1e10;
+        for (ck = m; ck <= min(n, min(m + 3, k)); ck ++) {
+            for (i = 0; i <= n - ck; i ++) {
+                mid1 = i + ck / 2;
+                mid2 = i + ck - ck / 2;
+                cur = pre[i + ck] - pre[mid2] - (pre[mid1] - pre[i]);
+                ans = min(ans, cur + (k - ck) * 2);
+//                             ---   ------------
+//                             increasing operation 2 (swap), cost: 1
+//                                   fixed  operation 1 (change), cost: 2
+            }
+        }
+        return ans;
     }
 };
 ```
