--- a/algorithm/LeetCode/[Hard] 3562. Maximum Profit from Trading Stocks with Discounts.md
+++ b/algorithm/LeetCode/[Hard] 3562. Maximum Profit from Trading Stocks with Discounts.md
@@ -177,3 +177,115 @@ public:
     }
 };
 ```
+
+**Solution 2: (Tree Dynamic Programming, DP Bottom-Up, taken not-taken, O(n * budget^2))**
+
+dp(u,state,b):
+* state = 0: the maximum profit of the subtree rooted at u with budget b when the discount is not available (that is, when the parent node is not purchased).
+* state = 1: the maximum profit of the subtree rooted at u with budget b when the discount is available (the parent node must be purchased).
+
+* If state = 0, discounts are not available. The profit is
+subProfit(1, b − present_u) + future_u − present_u
+* If state = 1, discounts are available. The profit is
+subProfit(1, b − ⌊present_u / 2⌋) + future_u − ⌊present_u / 2⌋
+
+    present = [4,6,8], future = [7,9,11], hierarchy = [[1,2],[1,3]], budget = 10
+
+                      p  f
+                 > 1 [4, 7]
+                dp0 dp1 uSize subProfit0 subProfit1
+                        18
+0
+1
+2
+3                                        6
+4                                        7
+5                                        7
+6                3  3         3          7
+7                3  3         3          7
+8                3  3         3          7
+9                3  3         3          7
+10               10 3         3          7
+              /       \
+          > 3          2
+           [8,11]     [6,9]
+    dp0 dp1 uSize    dp0 dp1 uSize
+            8                6
+0
+1
+2
+3                        6
+4       7                6
+5       7                6
+6       7            3   6
+7       7            3   6
+8   3   7            3   6
+9   3   7            3   6
+10  3   7            3   6
+
+```
+Runtime: 320 ms, Beats 86.11%
+Memory: 105.26 MB, Beats 73.61%
+```
+```c++
+class Solution {
+public:
+    int maxProfit(int n, vector<int>& present, vector<int>& future, vector<vector<int>>& hierarchy, int budget) {
+        vector<vector<int>> g(n);
+
+        for (auto& e : hierarchy) {
+            g[e[0] - 1].push_back(e[1] - 1);
+        }
+
+        auto dfs = [&](auto&& self,
+                       int u) -> tuple<vector<int>, vector<int>, int> {
+            int cost = present[u];
+            int dCost = present[u] / 2;  // discounted cost
+
+            // dp[u][state][budget]
+            // state = 0: Do not purchase parent node, state = 1: Must purchase
+            // parent node
+            auto dp0 = vector(budget + 1, 0);
+            auto dp1 = vector(budget + 1, 0);
+
+            // subProfit[state][budget]
+            // state = 0: discount not available, state = 1: discount available
+            auto subProfit0 = vector(budget + 1, 0);
+            auto subProfit1 = vector(budget + 1, 0);
+
+            int uSize = cost;
+
+            for (auto v : g[u]) {
+                auto [subDp0, subDp1, vSize] = self(self, v);
+                uSize += vSize;
+                for (int i = budget; i >= 0; i--) {
+                    for (int sub = 0; sub <= min(vSize, i); sub++) {
+                        subProfit0[i] = max(subProfit0[i],
+                                            subProfit0[i - sub] + subDp0[sub]);
+                        subProfit1[i] = max(subProfit1[i],
+                                            subProfit1[i - sub] + subDp1[sub]);
+                    }
+                }
+            }
+
+            for (int i = 0; i <= budget; i++) {
+                dp0[i] = dp1[i] = subProfit0[i];
+
+                if (i >= dCost) {
+                    dp1[i] = max(subProfit0[i],
+                                 subProfit1[i - dCost] + future[u] - dCost);
+                }
+
+                if (i >= cost) {
+                    dp0[i] = max(subProfit0[i],
+                                 subProfit1[i - cost] + future[u] - cost);
+                }
+            }
+
+            return {dp0, dp1, uSize};
+        };
+
+        return std::get<0>(dfs(dfs, 0))[budget];
+    }
+};
+```
