--- a/algorithm/LeetCode/[Hard] 3777. Minimum Deletions to Make Alternating Substring.md
+++ b/algorithm/LeetCode/[Hard] 3777. Minimum Deletions to Make Alternating Substring.md
@@ -72,7 +72,7 @@ Thus, the answer is [0, 1].
 
 # Submissions
 ---
-**Solution 1: (Fenwick Tree, BIT)**
+**Solution 1: (Fenwick Tree, BIT, Prefix Sum)**
 
 __Intuition__
 The solution uses a Fenwick Tree to efficiently count "violations",
