--- a/algorithm/LeetCode/[Hard] 2983. Palindrome Rearrangement Queries.md
+++ b/algorithm/LeetCode/[Hard] 2983. Palindrome Rearrangement Queries.md
@@ -246,3 +246,77 @@ public:
     }
 };
 ```
+
+**Solution 2: (prefix sum)**
+
+__Approach__
+The idea is pretty straightforward. Compute the prefix sum and check for violation of the palindromic rule for each query. Two prefix sums are computed: psd is the prefix sum of the number of differred characters when folding the upper half to the lower one. psc is the prefix sum of the character count (cnt). valarray<int> is basically the mathematical vector and its arithmetic operations are what we need here.
+
+The most difficult part is the incredible details in the range subscripts. The trick here is to use left closed right open intervals.
+
+__Complexity__
+Time complexity:
+O(n)
+
+Space complexity:
+O(n)
+                       
+         d2                c2    b2    a2    
+               a1    b1    c1                d1
+         0     1     2     3     4     5
+    s = "a     b     c     a     b     c"
+ psd     0     1           2x    
+ ps           -ix2-       -----ix1-------
+a        0     1                 2
+b        0           1                 2
+c        0                 1                 2
+
+    queries = [[1, 1, 3, 5],[0, 2, 5, 5]]
+                a1  b1c1  d1             
+
+```
+Runtime: 213 ms, Beats 66.67%
+Memory: 262.44 MB, Beats 61.11%
+```
+```c++
+class Solution {
+public:
+    vector<bool> canMakePalindromeQueries(string s, vector<vector<int>>& queries) {
+        int n = s.size();
+        vector<int> psd(1); // prefix sum (difference)
+        for (int i = 0, j = n - 1; i < j; i++, j--)
+            psd.push_back(psd.back() + (s[i] != s[j]));
+
+        valarray<int> cnt(26);
+        vector<valarray<int>> psc(1, cnt); // prefix sum (count)
+        for (char c : s) {
+            ++cnt[c - 'a'];
+            psc.push_back(cnt);
+        }
+
+        vector<bool> ans;
+        for (auto &q : queries) {
+            int a1 = q[0], b1 = q[1] + 1, a2 = n - q[0], b2 = n - 1 - q[1];
+            int c1 = q[2], d1 = q[3] + 1, c2 = n - q[2], d2 = n - 1 - q[3];
+
+            // no difference allowed outside the query ranges
+            if (min(a1, d2) && psd[min(a1, d2)]
+                || n/2 > max(b1, c2) && psd[n/2] - psd[max(b1, c2)]
+                || d2 > b1 && psd[d2] - psd[b1]
+                || a1 > c2 && psd[a1] - psd[c2]) {
+                ans.push_back(false);
+            }
+            else {
+                // intersection of query ranges in lower half must equate to that in upper half
+                valarray<int> ix1 = psc[d1] - psc[c1], ix2 = psc[b1] - psc[a1];
+                if (a1 > d2) ix1 -= psc[min(a1, c2)] - psc[d2];
+                if (c2 > b1) ix1 -= psc[c2] - psc[max(b1, d2)];
+                if (c1 > b2) ix2 -= psc[min(c1, a2)] - psc[b2];
+                if (a2 > d1) ix2 -= psc[a2] - psc[max(d1, b2)];
+                ans.push_back((ix1 >= 0 && ix2 >= 0 && ix1 == ix2).min());
+            }
+        }
+        return ans;
+    }
+};
+```
