--- a/algorithm/LeetCode/[Hard] 3077. Maximum Strength of K Disjoint Subarrays.md
+++ b/algorithm/LeetCode/[Hard] 3077. Maximum Strength of K Disjoint Subarrays.md
@@ -82,3 +82,96 @@ public:
     }
 };
 ```
+
+**Solution 2: (DP Bottom-Up)**
+```
+Runtime: 290 ms, Beats 65.00%
+Memory: 269.41 MB, Beats 63.75%
+```
+```c++
+class Solution {
+public:
+    long long maximumStrength(vector<int>& nums, int k) {
+        int n = nums.size(), i, j;
+        vector<long long> pre_sum(n + 1);
+        for (int i = 0; i < n; ++i) {
+            pre_sum[i + 1] = pre_sum[i] + nums[i];
+        }
+        vector<vector<long long>> dp0(n + 1, vector<long long>(k + 1, LLONG_MIN)), dp1(n + 1, vector<long long>(k + 1, LLONG_MIN));
+        for (i = 0; i <= n; ++i) {
+            dp0[i][0] = dp1[i][0] = 0;
+        }
+        for (i = n - 1; i >= 0; --i) 
+        {
+            for (j = 1; j <= min(k, n - i); j ++) {     
+                long long multiplier = (j % 2 == 1) ? 1 : -1;
+               
+                dp0[i][j] = max({dp0[i + 1][j], dp0[i + 1][j - 1], dp1[i + 1][j - 1]}) + static_cast<long long>(nums[i]) * static_cast<long long>(multiplier) * j;
+                dp1[i][j] = max(dp0[i][j], dp1[i + 1][j]);
+            }
+        }
+
+        return max(dp0[0][k], dp1[0][k]);
+    }
+};
+```
+
+**Solution 3: (DP Bottom-Up)**
+
+    nums = [1,  2,  3, -1,  2], k = 3
+            ---------  --   -
+3           3   9  18  15  21          
+                3   9  18  18
+            ------------------
+-2             -4  -2  20  20
+                3   9  18  15
+            -----------------
+1                  -1   9  22
+                   -4  -2  -2
+
+
+    nums = [12, -2, -2, -2, -2], k = 5
+            --  --  --  --  --
+5           60  50  40  30  20  
+             0  60  60  60  60
+            ----------------------------
+-4              68  68  68  68
+                60  68  68  68
+            ----------------------------
+3                   62  62  62
+                    68  68  68
+            ----------------------------
+-2                      66  66
+                        68  68
+            ----------------------------
+1                           64
+                             ~
+
+    nums = [-1, -2, -3], k = 1
+            --
+1           -1  -1  -1  
+             0  -1  -1
+
+```
+Runtime: 264 ms, Beats 70.00%
+Memory: 267.79 MB, Beats 66.25%
+```
+```c++
+class Solution {
+public:
+    long long maximumStrength(vector<int>& nums, int k) {
+        int n = nums.size(), i, j;
+        vector<vector<long long>> dp0(n, vector<long long>(k, LONG_LONG_MIN)), dp1(n, vector<long long>(k, LONG_LONG_MIN));
+        dp1[0][0] = 1LL * k * nums[0];
+        for (i = 1; i < n; i ++) {
+            dp1[i][0] = max(dp1[i - 1][0] + 1LL * k * nums[i], 1LL * k * nums[i]);
+            dp0[i][0] = max(dp0[i - 1][0], dp1[i - 1][0]);
+            for (j = 1; j <= min(i, k - 1); j ++) {
+                dp1[i][j] = max({dp1[i - 1][j], dp1[i - 1][j - 1], dp0[i - 1][j - 1]}) + 1LL * (k - j) * (j % 2? -1: 1) * nums[i];
+                dp0[i][j] = max(dp1[i - 1][j], dp0[i - 1][j]);
+            }
+        }
+        return max(dp1[n - 1][k - 1], dp0[n - 1][k - 1]);
+    }
+};
+```
