--- a/algorithm/LeetCode/[Hard] 3225. Maximum Score From Grid Operations.md
+++ b/algorithm/LeetCode/[Hard] 3225. Maximum Score From Grid Operations.md
@@ -84,6 +84,37 @@ O(N^3)
 Space complexity:
 O(N^2)
 
+    grid = [[  0,  0,  0,  0,  0],
+prefixSum      0   0   0   0   0
+maxPrefix      0   0   0   0   0
+maxSuffix                              0
+dp             0   ~   ~   ~   ~   ~
+            [  0,  0,  3,  0,  0],
+prefixSuma     0   0   0   0   0
+maxPrefix      0   
+maxSuffix                              0
+dp             0   ~   ~   ~   ~   ~
+            [  0,  1,  0,  0,  0],
+prefixSum      0   0   3   0   0
+maxPrefix      0   
+maxSuffix                              0
+dp             0   ~   ~   ~   ~   ~
+            [  5,  0,  0,  3,  0],
+prefixSum      0   1   3   0   0
+maxPrefix      0   
+maxSuffix                              0
+dp             0   ~   ~   ~   ~   ~
+            [  0,  0,  0,  0,  2]]
+prefixSum      5   1   3   3   0
+maxPrefix      0   
+maxSuffix                              0
+dp             0   ~   ~   ~   ~   ~
+
+prefixSum      5   1   3   3   2
+maxPrefix      0   
+maxSuffix      0   
+dp             0   ~   ~   ~   ~   ~
+
 ```
 Runtime: 322 ms
 Memory: 315.41 MB
