update LeetCode Weekly Contest 482

--- a/algorithm/LeetCode/[Easy] 3074. Apple Redistribution into Boxes.md
+++ b/algorithm/LeetCode/[Easy] 3074. Apple Redistribution into Boxes.md
@@ -36,24 +36,22 @@ Explanation: We will need to use all the boxes.
 ---
 **Solution 1: (Sort)**
 ```
-Runtime: 0 ms
-Memory: 32.04 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 33.06 MB, Beats 77.58%
 ```
 ```c++
 class Solution {
 public:
     int minimumBoxes(vector<int>& apple, vector<int>& capacity) {
         sort(capacity.begin(), capacity.end(), greater<int>());
-        int sm = accumulate(apple.begin(), apple.end(), 0);
+        int a = accumulate(apple.begin(), apple.end(), 0);
         int i = 0;
-        while (sm) {
-            sm -= capacity[i];
-            if (sm <= 0) {
-                break;
-            }
+        while (a > 0) {
+            a -= capacity[i];
             i += 1;
         }
-        return i+1;
+        return i;
+
     }
 };
 ```
