--- a/algorithm/LeetCode/[Hard] 1157. Online Majority Element In Subarray.md
+++ b/algorithm/LeetCode/[Hard] 1157. Online Majority Element In Subarray.md
@@ -202,3 +202,86 @@ public:
  * int param_1 = obj->query(left,right,threshold);
  */
 ```
+
+**Solution 4: (BIT, Bit Manipulation)**
+
+["MajorityChecker", "query", "query", "query"]
+[[[1, 1, 2, 2, 1, 1]], [0, 5, 4], [0, 3, 3], [2, 3, 2]]
+
+      0   1   2   3   4   5
+bit   1   1   2   2   1   1
+      ---------------------  4
+      -------------          3
+              -----          2
+0     1   1           1   1
+1             1   1
+----------------------------------
+pos
+1     0   1           4   5
+2             2   3
+pre
+                          q0r
+                  q1r
+          q2l     q2r 
+0     1   2   2   2   3   4
+1             1   2
+
+```
+Runtime: 67 ms, Beats 69.65%
+Memory: 146.64 MB, Beats 7.58%
+```
+```c++
+const int N = 2e4 + 1;
+class MajorityChecker {
+    vector<int> pos[N];
+    int pre[N][14];
+    int cnt_bit(int l, int r, int i){
+        if (l == 0) return pre[r][i];
+        return pre[r][i] - pre[l - 1][i];
+    }
+
+    int cnt_val(int l, int r, int val){
+        return upper_bound(pos[val].begin(), pos[val].end(), r)
+             - lower_bound(pos[val].begin(), pos[val].end(), l);
+    }
+public:
+    MajorityChecker(vector<int>& arr) {
+        for (int i = 0; i < arr.size(); ++i){
+            pos[arr[i]].push_back(i);
+            for (int j = 0; j < 14; ++j){
+                if (i > 0) pre[i][j] = pre[i - 1][j];
+                if (arr[i] & (1 << j)) ++pre[i][j];
+            }
+        }
+    }
+    
+    int query(int left, int right, int threshold) {
+        int res = 0;
+        for (int j = 0; j < 14; ++j){
+            // 1 count
+            int c = cnt_bit(left, right, j);
+            if (c >= threshold){
+                res |= 1 << j;
+            }
+            else{
+                // 0 count
+                if (right - left + 1 - c < threshold){
+                    return -1;
+                }
+            }
+        }
+
+        if (cnt_val(left, right, res) >= threshold){
+            return res;
+        }
+        
+        return -1;
+    }
+};
+
+/**
+ * Your MajorityChecker object will be instantiated and called as such:
+ * MajorityChecker* obj = new MajorityChecker(arr);
+ * int param_1 = obj->query(left,right,threshold);
+ */
+```
