--- a/algorithm/LeetCode/[Hard] 1964. Find the Longest Valid Obstacle Course at Each Position.md
+++ b/algorithm/LeetCode/[Hard] 1964. Find the Longest Valid Obstacle Course at Each Position.md
@@ -75,7 +75,62 @@ class Solution:
         return obstacles
 ```
 
-**Solution 2: (Greedy, Binary Search)**
+**Solution 2: (BIT)**
+```
+Runtime: 385 ms, Beats 5.03%
+Memory: 190.93 MB, Beats 5.32%
+```
+```c++
+class BIT {
+    vector<int> pre;
+public:
+    BIT() {}
+    void build(int n) {
+        pre.resize(n + 1);
+    }
+    int query(int i) {
+        int j = i, rst = 0;
+        while (j > 0) {
+            rst = max(rst, pre[j]);
+            j -= j & (-j);
+        }
+        return rst;
+    }
+    void update(int i, int val) {
+        int j = i + 1;
+        while (j < pre.size()) {
+            pre[j] = max(pre[j], val);
+            j += j & (-j); 
+        }
+    }
+};
+
+class Solution {
+public:
+    vector<int> longestObstacleCourseAtEachPosition(vector<int>& obstacles) {
+        set<int> st(obstacles.begin(), obstacles.end());
+        unordered_map<int, int> mp;
+        int i = 0, n, left;
+        for (auto it = st.begin(); it != st.end(); it++) {
+            mp[*it] = i;
+            i += 1;
+        }
+        n = i;
+        BIT bit;
+        bit.build(n);
+        vector<int> ans;
+        for (auto obs: obstacles) {
+            left = bit.query(mp[obs] + 1);
+            left += 1;
+            ans.push_back(left);
+            bit.update(mp[obs], left);
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 3: (Greedy, Binary Search)**
 ```
 Runtime: 326 ms
 Memory: 117.7 MB
