--- a/algorithm/LeetCode/[Hard] 2276. Count Integers in Intervals.md
+++ b/algorithm/LeetCode/[Hard] 2276. Count Integers in Intervals.md
@@ -92,47 +92,72 @@ class CountIntervals:
 ```
 
 **Solution 2: (Binary Search)**
+
+    2 3 4 5 6 7 8 9 10
+    x x
+cnt +++
+              x x x x
+cnt ...       +++++++
+          x x x x
+cnt ...       .......
+              -------  step 1
+          +++++++++++  step 2
+
+    1  2  3  4  5  6  7  8  9  10
+       x  x                           add
+mp:
+    2: 3
+cnt:   2
+                      x  x  x   x     add
+mp:
+    2: 3
+    7: 10
+cnt:   6
+                x  x  x  x
+                ^l       ^r
+                                ^r
+mp:
+    2: 3
+    7: 10 <it
+cnt:   6
+      -4
+      +6
+       x  x     x  x  x  x  x   x
+
 ```
-Runtime: 943 ms
-Memory Usage: 186.3 MB
+Runtime: 91 ms, Beats 72.05%
+Memory: 194.07 MB, Beats 74.53%
 ```
 ```c++
 class CountIntervals {
-public:
-    map<int, int> m;
+    map<int, int> mp;
     int cnt = 0;
+public:
     CountIntervals() {
         
     }
     
     void add(int left, int right) {
-        auto it = m.upper_bound(left);
-        if (it != begin(m)) {
+        auto it = mp.upper_bound(left);
+        if (it != begin(mp)) {
             auto p = prev(it);
             if (p->second >= left) {
                 left = p->first;
                 right = max(right, p->second);
                 cnt -= p->second - p->first + 1;
-                m.erase(p);
+                mp.erase(p);
             }
         }
-        for (; it != end(m) && it->first <= right; m.erase(it++)) {
+        for (; it != end(mp) && it->first <= right; mp.erase(it++)) {
             right = max(right, it->second);
             cnt -= it->second - it->first + 1;
         }
         cnt += right - left + 1;
-        m[left] = right;
+        mp[left] = right;
     }
     
     int count() {
-        return cnt; 
+        return cnt;
     }
 };
-
-/**
- * Your CountIntervals object will be instantiated and called as such:
- * CountIntervals* obj = new CountIntervals();
- * obj->add(left,right);
- * int param_2 = obj->count();
- */
 ```
