--- a/algorithm/LeetCode/[Hard] 2286. Booking Concert Tickets in Groups.md
+++ b/algorithm/LeetCode/[Hard] 2286. Booking Concert Tickets in Groups.md
@@ -297,3 +297,125 @@ class BookMyShow:
 # param_1 = obj.gather(k,maxRow)
 # param_2 = obj.scatter(k,maxRow)
 ```
+
+**Solutiopn 3: (Segment Tree, range max, range sum)**
+```
+Runtime: 75 ms, Beats 65.74%
+Memory: 310.36 MB, Beats 9.56%
+```
+```c++
+class BookMyShow {
+    int n;
+    int m;
+    vector<array<long long, 2>> dp; // segment tree that tracks (max, sum) of each segment
+    void build(int pos, int left, int right) {
+        if (left == right) {
+            dp[pos] = {m, m};
+            return;
+        }
+        int mid = left + (right -left) / 2;
+        build(2 * pos + 1, left, mid);
+        build(2 * pos + 2, mid + 1, right);
+        dp[pos] = {m, dp[2 * pos + 1][1] + dp[2 * pos + 2][1]};
+    }
+
+    vector<int> query_max(int pos, int left, int right, int k, int maxRow) {
+        if (left > maxRow) {
+            return {};
+        }
+        if (dp[pos][0] < k) {
+            return {};
+        }
+        if (left == right) {
+            return {left, (int)(m - dp[pos][0])};
+        }
+        int mid = left + (right - left) / 2;
+        vector<int> ret = query_max(2 * pos + 1, left, mid, k, maxRow);
+        if (ret.size()) {
+            return ret;
+        }
+        return query_max(2 * pos + 2, mid + 1, right, k, maxRow);
+    }
+
+    void update_max(int pos, int left, int right, int row, int val) {
+        if (left > row || right < row) {
+            return;
+        }
+        if (left == right) {
+            if (left == row) {
+                dp[pos][0] -= val;
+                dp[pos][1] -= val;
+            }
+            return;
+        }
+        int mid = left + (right - left) / 2;
+        update_max(2 * pos + 1, left, mid, row, val);
+        update_max(2 * pos + 2, mid + 1, right, row, val);
+        dp[pos][0] = max(dp[2 * pos + 1][0], dp[2 * pos + 2][0]);
+        dp[pos][1] = dp[2 * pos + 1][1] + dp[2 * pos + 2][1];
+    }
+
+    long long query_sum(int pos, int left, int right, int maxRow) {
+        if (left > maxRow) {
+            return 0;
+        }
+        if (right <= maxRow) {
+            return dp[pos][1];
+        }
+        int mid = left + (right - left) / 2;
+        return query_sum(2 * pos + 1, left, mid, maxRow) + query_sum(2 * pos + 2, mid + 1, right, maxRow);
+    }
+
+    void update_sum(int pos, int left, int right, int val, int maxRow) {
+        if (left > maxRow) {
+            return;
+        }
+        if (left == right) {
+            dp[pos][0] -= val;
+            dp[pos][1] -= val;
+            return;
+        }
+        int mid = left + (right - left) / 2;
+        if (mid + 1 > maxRow || dp[2 * pos + 1][1] >= val) {
+            update_sum(2 * pos + 1, left, mid, val, maxRow);
+        } else {
+            val -= dp[2 * pos + 1][1];
+            update_sum(2 * pos + 1, left, mid, dp[2 * pos + 1][1], maxRow);
+            update_sum(2 * pos + 2, mid + 1, right, val, maxRow);
+        }
+        dp[pos][0] = max(dp[2 * pos + 1][0], dp[2 * pos + 2][0]);
+        dp[pos][1] = dp[2 * pos + 1][1] + dp[2 * pos + 2][1];
+    }
+public:
+    BookMyShow(int n, int m) {
+        this->n = n;
+        this->m = m;
+        dp.resize(4 * n);
+        build(0, 0, n - 1);
+    }
+    
+    vector<int> gather(int k, int maxRow) {
+        vector<int> ret = query_max(0, 0, n - 1, k, maxRow);
+        if (ret.size()) {
+            update_max(0, 0, n - 1, ret[0], k);
+        }
+        return ret;
+    }
+    
+    bool scatter(int k, int maxRow) {
+        long long cnt = query_sum(0, 0, n - 1, maxRow);
+        bool ret = cnt >= k;
+        if (ret) {
+            update_sum(0, 0, n - 1, k, maxRow);
+        }
+        return ret;
+    }
+};
+
+/**
+ * Your BookMyShow object will be instantiated and called as such:
+ * BookMyShow* obj = new BookMyShow(n, m);
+ * vector<int> param_1 = obj->gather(k,maxRow);
+ * bool param_2 = obj->scatter(k,maxRow);
+ */
+```
