--- a/algorithm/LeetCode/[Hard] 2402. Meeting Rooms III.md
+++ b/algorithm/LeetCode/[Hard] 2402. Meeting Rooms III.md
@@ -182,45 +182,135 @@ public:
 };
 ```
 
-**Solution 4: (Heap)**
+**Solution 4: (Sort, Heap, free + work = room)**
+
+                                   v
+r                   0  1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  20
+0                      |------------------------------------------------------------------->
+1*                        |------------------------>
+                                                   |------->
+2                            |----->
+                                   |--------------->
+
+
+
+r                   0  1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  20
+0                      |------------------------------------------------------------------->
+1*                        |------------------------>
+                                                   |------->
+2                            |----->
+                                   |--------------->
+t                                                   ^
+
+free                {0,1,2}
+                     x
+                       {1,2}
+                        x
+                             {2}   {2}              {1,2}
+                              x     x                x
+work
+0                      {20,0}
+1                         {10,1}                    {12,1}
+2                            {5,2} x
+                                   {10,2}
+
 ```
-Runtime: 71 ms, Beats 67.54%
-Memory: 98.06 MB, Beats 90.79%
+Runtime: 71 ms, Beats 61.03%
+Memory: 98.10 MB, Beats 88.93%
 ```
 ```c++
 class Solution {
 public:
     int mostBooked(int n, vector<vector<int>>& meetings) {
-        int m = meetings.size(), i, j, ans;
-        long long cur = -1, mx = 0;
-        sort(meetings.begin(), meetings.end());
-        priority_queue<pair<long long, int>, vector<pair<long long, int>>, greater<>> work;
+        int m = meetings.size(), i, nj, d, mx = 0, ans = n - 1;
+        long long t = -1;
+        vector<int> cnt(n);
         priority_queue<int, vector<int>, greater<>> free;
+        priority_queue<pair<long long, int>, vector<pair<long long, int>>, greater<>> work;
         for (i = 0; i < n; i ++) {
             free.push(i);
         }
-        vector<int> cnt(n);
+        sort(begin(meetings), end(meetings));
         for (i = 0; i < m; i ++) {
-            cur = max(cur, (long long)meetings[i][0]);
+            t = max(t, (long long)meetings[i][0]);
+            while (work.size() && work.top().first <= t) {
+                auto [_, j] = work.top();
+                work.pop();
+                free.push(j);
+            }
             if (free.size() == 0) {
-                cur = max(cur, work.top().first);
-                free.push(work.top().second);
+                auto [ct, j] = work.top();
                 work.pop();
+                t = ct;
+                free.push(j);
             }
-            while (work.size() && work.top().first <= cur) {
-                free.push(work.top().second);
-                work.pop();
+            d = meetings[i][1] - meetings[i][0];
+            nj = free.top();
+            cnt[nj] += 1;
+            if (cnt[nj] > mx) {
+                mx = cnt[nj];
+                ans = nj;
+            } else if (cnt[nj] == mx) {
+                ans = min(ans, nj);
             }
-            auto m = free.top();
+            work.push({t + d, nj});
             free.pop();
-            cnt[m] += 1;
-            if (cnt[m] > mx) {
-                mx = cnt[m];
-                ans = m;
-            } else if (cnt[m] == mx) {
-                ans = min(ans, m);
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 5: (Sort, Heap, 1 priority queue)**
+
+r                   0  1  2  3  4  5  6  7  8  9  10
+0*                  |-------------0----------------> 
+                             |3->
+                                                  |3->
+1                      |----------->                 
+                          |-------------->
+                                   |-------------->
+t                      ^
+pq
+0           {-1,0}  {0,1}x                         {10,0}
+1           {-1,1}  {0,1}
+                      {1,1}x       {5,1}
+
+```
+Runtime: 75ms, Beats 52.17%
+Memory: 98.10 MB, Beats 88.93%
+```
+```c++
+class Solution {
+public:
+    int mostBooked(int n, vector<vector<int>>& meetings) {
+        int m = meetings.size(), i, d, mx = 0, ans = n - 1;
+        long long t = -1;
+        vector<int> cnt(n);
+        priority_queue<pair<long long, int>, vector<pair<long long, int>>, greater<>> pq;
+        for (i = 0; i < n; i ++) {
+            pq.push({-1, i});
+        }
+        sort(begin(meetings), end(meetings));
+        for (i = 0; i < m; i ++) {
+            t = max(t, (long long)meetings[i][0]);
+            t = max(t, pq.top().first);
+            while (pq.top().first < t) {
+                auto [_, cj] = pq.top();
+                pq.pop();
+                pq.push({t, cj});
             }
-            work.push({cur + meetings[i][1] - meetings[i][0], m});
+            auto [ct, j] = pq.top();
+            pq.pop();
+            d = meetings[i][1] - meetings[i][0];
+            cnt[j] += 1;
+            if (cnt[j] > mx) {
+                mx = cnt[j];
+                ans = j;
+            } else if (cnt[j] == mx) {
+                ans = min(ans, j);
+            }
+            pq.push({ct + d, j});
         }
         return ans;
     }
