--- a/algorithm/LeetCode/[Hard] 3187. Peaks in Array.md
+++ b/algorithm/LeetCode/[Hard] 3187. Peaks in Array.md
@@ -192,4 +192,67 @@ public:
         return results;
     }
 };
+```   
+
+**Solution 2: (BIT)**
+
+                                                     q0      q1
+    nums = [ 4, 1, 4, 2, 1, 5], queries = [[2,2,4],[1,0,2],[1,0,4]]
+                   4
+    peak           1
+    q0          l  r
+    q1          l        r
+             0  1  2  3  4  5  6
+    bit      0  0  0  1  0  0  0
+
+```
+Runtime: 37 ms, Beats 86.36%
+Memory: 232.52 MB, Beats 99.09%
+```
+```c++
+class Solution {
+    constexpr int static sz = 1e5 + 1;
+    int bt[sz + 1] = {};
+    int query(int i) {
+        int rst = 0;
+        for (int j = i; j > 0; j -= j & (-j)) {
+            rst += bt[j];
+        }
+        return rst;
+    }
+    void update(int i, int val) {
+        for (int j = i + 1; j <= sz; j += j & (-j)) {
+            bt[j] += val;
+        }
+    }
+public:
+    vector<int> countOfPeaks(vector<int>& nums, vector<vector<int>>& queries) {
+        int n = nums.size(), i, j, pi;
+        vector<int> prev;
+        auto isPeak = [&](int ci) {
+            return ci > 0 && ci + 1 < n && nums[ci - 1] < nums[ci] && nums[ci] > nums[ci + 1];
+        };
+        for (i = 1; i + 1 < n; i ++) {
+            if (isPeak(i)) {
+                update(i, 1);
+            }
+        }
+        vector<int> ans;
+        for (const auto &q : queries) {
+            if (q[0] == 1) {
+                ans.push_back(q[1] < q[2] ? query(q[2]) - query(q[1] + 1) : 0);
+            } else {
+                i = q[1];
+                prev = {isPeak(i - 1), isPeak(i), isPeak(i + 1)};
+                nums[i] = q[2];
+                for (pi = 0, j = i - 1; j < i + 2; j ++, pi ++) {
+                    if (prev[pi] != isPeak(j)) {
+                        update(j, prev[pi]? -1 : 1);
+                    }
+                }
+            }
+        }
+        return ans;
+    }
+};
 ```
