--- a/algorithm/LeetCode/[Easy] 1351. Count Negative Numbers in a Sorted Matrix.md
+++ b/algorithm/LeetCode/[Easy] 1351. Count Negative Numbers in a Sorted Matrix.md
@@ -114,3 +114,48 @@ public:
     }
 };
 ```
+
+**Solution 4: (Greedy)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 14.02 MB, Beats, 67.95%
+```
+```c++
+class Solution {
+public:
+    int countNegatives(vector<vector<int>>& grid) {
+        int m = grid.size(), n = grid[0].size(), i = m - 1, j = 0, ans = 0;
+        while (i >= 0) {
+            while (j < n && grid[i][j] >= 0) {
+                j += 1;
+            }
+            ans += n - j;
+            i -= 1;
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 5: (Greedy)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 14.19 MB, Beats 35.40%
+```
+```c++
+class Solution {
+public:
+    int countNegatives(vector<vector<int>>& grid) {
+        int m = grid.size(), n = grid[0].size(), i = m - 1, j = 0, ans = 0;
+        while (i >= 0 && j < n) {
+            if (grid[i][j] < 0) {
+                ans += n - j;
+                i -= 1;
+            } else {
+                j += 1;
+            }
+        }
+        return ans;
+    }
+};
+```
