--- a/algorithm/LeetCode/[Hard] 3691. Maximum Total Subarray Value II.md
+++ b/algorithm/LeetCode/[Hard] 3691. Maximum Total Subarray Value II.md
@@ -146,3 +146,67 @@ public:
     }
 };
 ```
+
+**Solution 2: (Sparse Table, Max Heap, Greedy, range min and range max)**
+```
+Runtime: 436 ms, Beats 72.87%
+Memory: 162.05 MB, Beats 76.38%
+```
+```c++
+class SegmentTree {
+    vector<array<int, 2>> dp;
+public:
+    SegmentTree(int n) {
+        dp.resize(4 * n);
+    }
+    void build(int ti, int left, int right, vector<int> &arr) {
+        if (left == right) {
+            dp[ti][0] = arr[left];
+            dp[ti][1] = arr[left];
+            return;
+        }
+        int mid = left + (right - left) / 2;
+        build(2 * ti + 1, left, mid, arr);
+        build(2 * ti + 2, mid + 1, right, arr);
+        dp[ti][0] = min(dp[2 * ti + 1][0], dp[2 * ti + 2][0]);
+        dp[ti][1] = max(dp[2 * ti + 1][1], dp[2 * ti + 2][1]);
+    }
+    array<int, 2> query(int ti, int left, int right, int q_left, int q_right) {
+        if (q_left > right || q_right < left) {
+            return {INT_MAX, INT_MIN};
+        }
+        if (q_left <= left && q_right >= right) {
+            return {dp[ti][0], dp[ti][1]};
+        }
+        int mid = left + (right - left) / 2;
+        auto [left_min, left_max] = query(2 * ti + 1, left, mid, q_left, q_right);
+        auto [right_min, right_max] = query(2 * ti + 2, mid + 1, right, q_left, q_right);
+        return {min(left_min, right_min), max(left_max, right_max)};
+    }
+};
+
+class Solution {
+public:
+    long long maxTotalValue(vector<int>& nums, int k) {
+        int n = nums.size(), i;
+        SegmentTree sgt(n);
+        sgt.build(0, 0, n - 1, nums);
+        priority_queue<tuple<long long, int, int>> pq;
+        for (i = 0; i < n; i ++) {
+            auto [mn, mx] = sgt.query(0, 0, n - 1, i, n - 1);
+            pq.push({mx - mn, i, n - 1});
+        }
+        long long ans = 0;
+        while (k-- && !pq.empty()) {
+            auto [d, left, right] = pq.top();
+            pq.pop();
+            ans += d;
+            if (right - left > 1) {
+                auto [mn, mx] = sgt.query(0, 0, n - 1, left, right - 1);
+                pq.push({mx - mn, left, right - 1});
+            }
+        }
+        return ans;
+    }
+};
+```
