--- a/algorithm/LeetCode/[Hard] 3739. Count Subarrays With Majority Element II.md
+++ b/algorithm/LeetCode/[Hard] 3739. Count Subarrays With Majority Element II.md
@@ -57,7 +57,7 @@ target = 4 does not appear in nums at all. Therefore, there cannot be any subarr
 
 # Submissions
 ---
-**Solution 1: (Prefix Sum)**
+**Solution 1: (Prefix Sum, Counter)**
 
 __Intuition__
 We track a prefix balance pre
@@ -80,6 +80,43 @@ __Complexity__
 Time O(n)
 Space O(n)
 
+             0  1  2  3  4  5  6
+    nums = [ 1, 2, 2, 3],         target = 2
+               ^^
+                  ^^
+               ^^^^^
+            ^^^^^^^^
+               ^^^^^^^^
+pre      5
+balance            ...  -1  0  1 ...
+count                       1
+acc                         1
+ans     0
+-------------------------------
+pre          4
+count                    1  1
+acc                   0  1  1
+                      +
+ans     0
+-------------------------------
+pre             5
+count                    1  2
+acc                   0  1  3
+                         +
+ans      1
+-------------------------------
+pre                6
+count                    1  2  1
+acc                   0  1  3  4
+                            +
+ans      4
+-------------------------------
+pre                   5
+count                    1  3  1
+acc                   0  1  4  4
+                         +
+ans      5
+
 ```
 Runtime: 7 ms, Beats 93.75%
 Memory: 113.09 MB, Beats 37.50%
@@ -98,6 +135,45 @@ public:
             res += acc[pre - 1];
         }
         return res;
+    }
+};
+```
+
+**Solution 2: (BIT)**
+```
+Runtime: 28 ms, Beats 84.40%
+Memory: 98.86 MB, Beats 84.54%
+```
+```c++
+class Solution {
+    int query(vector<int>& bit, int i) {
+        int ans = 0;
+        while (i) {
+            ans += bit[i];
+            i -= i & -i;
+        }
+        return ans;
+    }
+    void update(vector<int>& bit, int i) {
+        while (i < bit.size()) {
+            bit[i] += 1;
+            i += i & -i;
+        }
+    }
+public:
+    long long countMajoritySubarrays(vector<int>& nums, int target) {
+        int n = nums.size();
+        long long ans = 0;
+        vector<int> pre(n + 1), bit(n * 2 + 1);
+        for (int i = 0; i < n; i++) {
+            pre[i + 1] = pre[i] + (nums[i] == target ? 1 : -1);
+        }
+        for (int i = 0; i <= n; i++) {
+            pre[i] += n;
+            ans += query(bit, pre[i]);
+            update(bit, pre[i] + 1);
+        }
+        return ans;
     }
 };
 ```
